// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Accessibility/Visually Hidden Visually Hidden 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-gicCDI fIooWp"
  >
    A screen reader will read this but you can't see it
  </div>,
]
`;

exports[`Storyshots Buttons/Bookmark Lesson Button Bookmark Lesson Button 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <div>
      <button
        aria-label="Add Bookmark"
        className="sc-bczRLJ sc-eCYdqJ bprpIx eummaE"
        disabled={false}
        onClick={[Function]}
        size="small"
        title="Add Bookmark"
      >
        <div
          className="sc-hKMtZM dzHdVU"
          size="small"
        >
          <span
            className="sc-gsnTZi fiKuMT"
            height={16}
            width={16}
          >
            <span
              className="sc-dkzDqf hosfuE"
              height={16}
              width={16}
            >
              <svg
                fill="currentColor"
                viewBox="2 2 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots Buttons/Button As Link Button As Link 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <a
    aria-label="Click me"
    className="sc-kDDrLX gshCnU"
    href="/"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    role="button"
    size="small"
    title="Click me"
  >
    <span
      className="sc-papXJ bdMMXR"
    >
      Click me
    </span>
  </a>,
]
`;

exports[`Storyshots Buttons/Button Button 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <button
    aria-label="Click me"
    className="sc-bczRLJ sc-jqUVSM bprpIx giZbiP"
    size="small"
    title="Click me"
  >
    <span
      className="sc-papXJ bdMMXR"
    >
      Click me
    </span>
  </button>,
]
`;

exports[`Storyshots Buttons/Button Group Button Group 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-crXcEl sc-evZas bAcObU eMIvTa"
  >
    <a
      aria-label="Download Lesson"
      className="sc-kDDrLX gshCnU"
      href="/"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      role="button"
      size="small"
      title="Download Lesson"
    >
      <span
        className="sc-ftvSup cTDWXd"
      >
        <span
          className="sc-gsnTZi fiKuMT"
          height={16}
          width={16}
        >
          <span
            className="sc-dkzDqf hosfuE"
            height={16}
            width={16}
          >
            <svg
              fill="none"
              height="100%"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2.5"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
              />
              <polyline
                points="7 10 12 15 17 10"
              />
              <line
                x1="12"
                x2="12"
                y1="15"
                y2="3"
              />
            </svg>
          </span>
        </span>
      </span>
      <span
        className="sc-papXJ bdMMXR"
      >
        Download
      </span>
    </a>
    <a
      aria-label="Share Lesson"
      className="sc-kDDrLX gshCnU"
      href="/"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      role="button"
      size="small"
      title="Share Lesson"
    >
      <span
        className="sc-ftvSup cTDWXd"
      >
        <span
          className="sc-gsnTZi fiKuMT"
          height={16}
          width={16}
        >
          <span
            className="sc-dkzDqf hosfuE"
            height={16}
            width={16}
          >
            <svg
              fill="none"
              height="100%"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2.5"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="18"
                cy="5"
                r="3"
              />
              <circle
                cx="6"
                cy="12"
                r="3"
              />
              <circle
                cx="18"
                cy="19"
                r="3"
              />
              <line
                x1="8.59"
                x2="15.42"
                y1="13.51"
                y2="17.49"
              />
              <line
                x1="15.41"
                x2="8.59"
                y1="6.51"
                y2="10.49"
              />
            </svg>
          </span>
        </span>
      </span>
      <span
        className="sc-papXJ bdMMXR"
      >
        Share
      </span>
    </a>
  </div>,
]
`;

exports[`Storyshots Buttons/Icon Button As Link Icon Button As Link 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <a
    aria-label="Click me"
    className="sc-iqcoie bJNxxk"
    href="/"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    role="button"
    size="small"
  >
    <div
      className="sc-hKMtZM dzHdVU"
      size="small"
    >
      <span
        className="sc-gsnTZi fiKuMT"
        height={16}
        width={16}
      >
        <span
          className="sc-dkzDqf hosfuE"
          height={16}
          width={16}
        >
          <svg
            fill="none"
            height="100%"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2.5"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <polyline
              points="7 10 12 15 17 10"
            />
            <line
              x1="12"
              x2="12"
              y1="15"
              y2="3"
            />
          </svg>
        </span>
      </span>
    </div>
  </a>,
]
`;

exports[`Storyshots Buttons/Icon Button Icon Button 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <button
    aria-label="Click me"
    className="sc-bczRLJ sc-eCYdqJ bprpIx eummaE"
    size="small"
    title="Click me"
  >
    <div
      className="sc-hKMtZM dzHdVU"
      size="small"
    >
      <span
        className="sc-gsnTZi fiKuMT"
        height={16}
        width={16}
      >
        <span
          className="sc-dkzDqf hosfuE"
          height={16}
          width={16}
        >
          <svg
            fill="none"
            height="100%"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2.5"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <polyline
              points="7 10 12 15 17 10"
            />
            <line
              x1="12"
              x2="12"
              y1="15"
              y2="3"
            />
          </svg>
        </span>
      </span>
    </div>
  </button>,
]
`;

exports[`Storyshots Cards/Card Card 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-breuTD lmLbkX"
  >
    <h2>
      Card title
    </h2>
    <p>
      You can put anything you like in here.
    </p>
  </div>,
]
`;

exports[`Storyshots Feedback/LoadingSpinner Loading Spinner 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <span
    className="sc-kgflAQ fXiRvw"
  >
    <span
      className="sc-dmRaPn gZcHcW"
    >
      Loading
    </span>
  </span>,
]
`;

exports[`Storyshots Form/BigInput Big Input 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <input
    className="sc-ksZaOG sc-hAZoDl cVSOsg jQTiCY"
    onChange={[Function]}
    placeholder="Placeholder"
    value=""
  />,
]
`;

exports[`Storyshots Form/Input Input 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-crXcEl jkDtYw"
  >
    <input
      className="sc-ksZaOG sc-fEOsli cVSOsg kwLXwc"
      onChange={[Function]}
      placeholder="Placeholder"
      value=""
    />
  </div>,
]
`;

exports[`Storyshots Form/Input With Icon 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-crXcEl jkDtYw"
  >
    <input
      className="sc-ksZaOG sc-fEOsli cVSOsg dmpqIL"
      onChange={[Function]}
      placeholder="Placeholder"
      value=""
    />
    <span
      className="sc-gsnTZi bzKDcl sc-fnykZs kNBhQx"
      height={20}
      width={40}
    >
      <span
        className="sc-dkzDqf cSKBNc"
        height={20}
        width={20}
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 17 17"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.875 14.6562L12.0938 10.875C12 10.8125 11.9062 10.75 11.8125 10.75H11.4062C12.375 9.625 13 8.125 13 6.5C13 2.9375 10.0625 0 6.5 0C2.90625 0 0 2.9375 0 6.5C0 10.0938 2.90625 13 6.5 13C8.125 13 9.59375 12.4062 10.75 11.4375V11.8438C10.75 11.9375 10.7812 12.0312 10.8438 12.125L14.625 15.9062C14.7812 16.0625 15.0312 16.0625 15.1562 15.9062L15.875 15.1875C16.0312 15.0625 16.0312 14.8125 15.875 14.6562ZM6.5 11.5C3.71875 11.5 1.5 9.28125 1.5 6.5C1.5 3.75 3.71875 1.5 6.5 1.5C9.25 1.5 11.5 3.75 11.5 6.5C11.5 9.28125 9.25 11.5 6.5 11.5Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </span>
  </div>,
]
`;

exports[`Storyshots Foundations/Flex Flex 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-crXcEl ecZVAl"
  >
    Flex box
  </div>,
]
`;

exports[`Storyshots Foundations/Heading Heading 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <span
    className="sc-bjUoiL khVuqK"
  >
    Heading
  </span>,
]
`;

exports[`Storyshots Foundations/Text Text 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <p
    className="sc-idiyUo fmCmhl"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id semper risus in hendrerit gravida rutrum quisque non tellus. Nibh praesent tristique magna sit. A arcu cursus vitae congue mauris rhoncus aenean. Turpis egestas maecenas pharetra convallis posuere morbi leo. Faucibus pulvinar elementum integer enim neque volutpat ac tincidunt. Vitae suscipit tellus mauris a diam maecenas. Faucibus a pellentesque sit amet porttitor eget dolor morbi non. Tortor vitae purus faucibus ornare. Bibendum est ultricies integer quis auctor elit. Massa id neque aliquam vestibulum morbi. Gravida neque convallis a cras semper auctor neque vitae. Massa tempor nec feugiat nisl pretium fusce id velit ut. Volutpat ac tincidunt vitae semper quis lectus nulla at volutpat. Id porta nibh venenatis cras sed felis eget. Pulvinar mattis nunc sed blandit libero volutpat sed cras. A diam maecenas sed enim ut sem viverra.
  </p>,
]
`;

exports[`Storyshots Headers & Footers/LessonHeader Lesson Header 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <header
    className="sc-hHLeRK VWFyV"
  >
    <div
      className="sc-crXcEl bAcObU"
    >
      <h1
        className="sc-bjUoiL gwJqXz"
        size={4}
      >
        <span
          className="sc-dIouRR irmRTR"
          display="block"
          fontSize={24}
        >
          Lesson
        </span>
      </h1>
    </div>
    <div
      className="sc-crXcEl sc-evZas bAcObU eMIvTa"
    >
      <a
        aria-label="Download Lesson"
        className="sc-kDDrLX iuNDPU"
        href="/"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        role="button"
        size="small"
        title="Download Lesson"
      >
        <span
          className="sc-ftvSup cTDWXd"
        >
          <span
            className="sc-gsnTZi fiKuMT"
            height={16}
            width={16}
          >
            <span
              className="sc-dkzDqf hosfuE"
              height={16}
              width={16}
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                />
                <polyline
                  points="7 10 12 15 17 10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="15"
                  y2="3"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          className="sc-papXJ bdMMXR"
        >
          Download
        </span>
      </a>
      <a
        aria-label="Share Lesson"
        className="sc-kDDrLX iuNDPU"
        href="/"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        role="button"
        size="small"
        title="Share Lesson"
      >
        <span
          className="sc-ftvSup cTDWXd"
        >
          <span
            className="sc-gsnTZi fiKuMT"
            height={16}
            width={16}
          >
            <span
              className="sc-dkzDqf hosfuE"
              height={16}
              width={16}
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="18"
                  cy="5"
                  r="3"
                />
                <circle
                  cx="6"
                  cy="12"
                  r="3"
                />
                <circle
                  cx="18"
                  cy="19"
                  r="3"
                />
                <line
                  x1="8.59"
                  x2="15.42"
                  y1="13.51"
                  y2="17.49"
                />
                <line
                  x1="15.41"
                  x2="8.59"
                  y1="6.51"
                  y2="10.49"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          className="sc-papXJ bdMMXR"
        >
          Share
        </span>
      </a>
      <button
        aria-label="Add Bookmark"
        className="sc-bczRLJ sc-eCYdqJ bprpIx eummaE"
        disabled={false}
        onClick={[Function]}
        size="small"
        title="Add Bookmark"
      >
        <div
          className="sc-hKMtZM dzHdVU"
          size="small"
        >
          <span
            className="sc-gsnTZi fiKuMT"
            height={16}
            width={16}
          >
            <span
              className="sc-dkzDqf hosfuE"
              height={16}
              width={16}
            >
              <svg
                fill="currentColor"
                viewBox="2 2 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </div>
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots Headers & Footers/SiteFooter Site Footer Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <footer
      className="sc-bBrHrO bgZYXQ"
    >
      © Oak National Academy 
      2022
    </footer>
  </div>,
]
`;

exports[`Storyshots Headers & Footers/SiteHeader Site Footer Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <header
      className="sc-ivTmOn iaWnIp"
    >
      <div
        className="sc-crXcEl gPPRNa"
      >
        <a
          className="sc-cxabCf eVVIkk"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <span
            className="sc-gsnTZi dwUICx"
            height={30}
            width={30}
          >
            <span
              className="sc-dkzDqf fWLDlY"
              height={30}
              width={30}
            >
              <svg
                height="100%"
                viewBox="0 0 48 48"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.5 40h-10q-.65 0-1.075-.425Q10 39.15 10 38.5V24H5.95q-.5 0-.7-.475-.2-.475.2-.825L23 6.9q.4-.4 1-.4t1 .4l9 7.95V10.5q0-.65.425-1.075Q34.85 9 35.5 9h1q.65 0 1.075.425Q38 9.85 38 10.5v8.05l4.55 4.15q.4.35.225.825Q42.6 24 42.05 24H38v14.5q0 .65-.425 1.075Q37.15 40 36.5 40h-10V28h-5ZM13 37h5.5V26.5q0-.65.425-1.075Q19.35 25 20 25h8q.65 0 1.075.425.425.425.425 1.075V37H35V19.95l-11-10-11 10Zm6.75-17.5h8.5q0-1.65-1.275-2.725Q25.7 15.7 24 15.7q-1.7 0-2.975 1.075Q19.75 17.85 19.75 19.5ZM20 25h8-8Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
          <span
            className="sc-dIouRR kiqyZb"
            fontFamily="heading"
            fontSize={20}
            fontWeight={600}
          >
            Oak
          </span>
        </a>
      </div>
      <form
        className="sc-fLlhyt fbwRLO"
        onSubmit={[Function]}
      >
        <div
          className="sc-crXcEl jkDtYw"
        >
          <input
            aria-label="Search"
            className="sc-ksZaOG sc-fEOsli cVSOsg kwLXwc"
            onChange={[Function]}
            placeholder="Search"
            type="search"
            value=""
          />
        </div>
        <button
          aria-label="Submit"
          className="sc-bczRLJ sc-eCYdqJ bprpIx eYVkiC"
          onClick={[Function]}
          size="small"
          title="Submit"
          type="submit"
        >
          <div
            className="sc-hKMtZM dzHdVU"
            size="small"
          >
            <span
              className="sc-gsnTZi fiKuMT"
              height={16}
              width={16}
            >
              <span
                className="sc-dkzDqf hosfuE"
                height={16}
                width={16}
              >
                <svg
                  fill="none"
                  height="100%"
                  viewBox="0 0 17 17"
                  width="100%"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.875 14.6562L12.0938 10.875C12 10.8125 11.9062 10.75 11.8125 10.75H11.4062C12.375 9.625 13 8.125 13 6.5C13 2.9375 10.0625 0 6.5 0C2.90625 0 0 2.9375 0 6.5C0 10.0938 2.90625 13 6.5 13C8.125 13 9.59375 12.4062 10.75 11.4375V11.8438C10.75 11.9375 10.7812 12.0312 10.8438 12.125L14.625 15.9062C14.7812 16.0625 15.0312 16.0625 15.1562 15.9062L15.875 15.1875C16.0312 15.0625 16.0312 14.8125 15.875 14.6562ZM6.5 11.5C3.71875 11.5 1.5 9.28125 1.5 6.5C1.5 3.75 3.71875 1.5 6.5 1.5C9.25 1.5 11.5 3.75 11.5 6.5C11.5 9.28125 9.25 11.5 6.5 11.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
          </div>
        </button>
      </form>
      <div
        className="sc-iIPllB bkAhVn"
      >
        <button
          className="sc-bczRLJ sc-llJcti bprpIx echjzB"
          onClick={[Function]}
        >
          pupils
        </button>
        <a
          href="/sign-in"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Sign in
        </a>
      </div>
    </header>
  </div>,
]
`;

exports[`Storyshots Inputs/search Search Form 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <form
    className="sc-fLlhyt fbwRLO"
    onSubmit={[Function]}
  >
    <div
      className="sc-crXcEl jkDtYw"
    >
      <input
        aria-label="Search"
        className="sc-ksZaOG sc-fEOsli cVSOsg kwLXwc"
        onChange={[Function]}
        placeholder="Search"
        type="search"
        value=""
      />
    </div>
    <button
      aria-label="Submit"
      className="sc-bczRLJ sc-eCYdqJ bprpIx eYVkiC"
      onClick={[Function]}
      size="small"
      title="Submit"
      type="submit"
    >
      <div
        className="sc-hKMtZM dzHdVU"
        size="small"
      >
        <span
          className="sc-gsnTZi fiKuMT"
          height={16}
          width={16}
        >
          <span
            className="sc-dkzDqf hosfuE"
            height={16}
            width={16}
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 17 17"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.875 14.6562L12.0938 10.875C12 10.8125 11.9062 10.75 11.8125 10.75H11.4062C12.375 9.625 13 8.125 13 6.5C13 2.9375 10.0625 0 6.5 0C2.90625 0 0 2.9375 0 6.5C0 10.0938 2.90625 13 6.5 13C8.125 13 9.59375 12.4062 10.75 11.4375V11.8438C10.75 11.9375 10.7812 12.0312 10.8438 12.125L14.625 15.9062C14.7812 16.0625 15.0312 16.0625 15.1562 15.9062L15.875 15.1875C16.0312 15.0625 16.0312 14.8125 15.875 14.6562ZM6.5 11.5C3.71875 11.5 1.5 9.28125 1.5 6.5C1.5 3.75 3.71875 1.5 6.5 1.5C9.25 1.5 11.5 3.75 11.5 6.5C11.5 9.28125 9.25 11.5 6.5 11.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
  </form>,
]
`;

exports[`Storyshots Media/Icon Icon Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <span
      className="sc-gsnTZi gjGDUD"
      height={100}
      width={100}
    >
      <span
        className="sc-dkzDqf bPkBds"
        height={100}
        width={100}
      >
        <svg
          fill="none"
          height="100%"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2.5"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </span>
    </span>
  </div>,
]
`;

exports[`Storyshots Navigation/Breadcrumbs Breadcrumb Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <nav
      aria-label="Breadcrumb"
      className="sc-jSMfEi dpkAqy"
    >
      <ol
        className="sc-gKXOVf flyuof"
      >
        <li
          className="sc-iBkjds djrcRa"
        >
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Unit Quiz
          </a>
        </li>
        <li
          className="sc-iBkjds djrcRa"
        >
          <span
            className="sc-gsnTZi csDFFj"
            height={20}
            width={20}
          >
            <span
              className="sc-dkzDqf cSKBNc"
              height={20}
              width={20}
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </span>
          </span>
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            View In Classroom
          </a>
        </li>
        <li
          className="sc-iBkjds djrcRa"
        >
          <span
            className="sc-gsnTZi csDFFj"
            height={20}
            width={20}
          >
            <span
              className="sc-dkzDqf cSKBNc"
              height={20}
              width={20}
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </span>
          </span>
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Foundation Curriculum (PDF)
          </a>
        </li>
        <li
          className="sc-iBkjds djrcRa"
        >
          <span
            className="sc-gsnTZi csDFFj"
            height={20}
            width={20}
          >
            <span
              className="sc-dkzDqf cSKBNc"
              height={20}
              width={20}
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </span>
          </span>
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Higher Curriculum (PDF)
          </a>
        </li>
      </ol>
    </nav>
  </div>,
]
`;
